--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architecture</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     
-    <head>
-        <nav class="navbar">
+    <header class="primary-color">
+        <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
+            </ul>
         </nav>
-    </head>
+    </header>
 
 
     <main>
