--- a/index.html
+++ b/index.html
@@ -1,36 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3-Architecture</title>
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
     <header class="primary-color">
-        <nav class="navbar display-flex">
-            <h3 class="brand">G3 Architects</h3>
-            <ul class="nav-links display-flex">
-                <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
-                <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
-                <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
-                <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar display-flex">
+        <h3 class="brand">G3 Architects</h3>
+        <ul class="nav-links display-flex">
+          <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
+          <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
+          <li class="nav-item">
+            <a href="" class="nav-link dark-2">Contact Us</a>
+          </li>
+          <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
+        </ul>
+      </nav>
+
+      <section class="banner">
+        <div class="banner-content">
+          <h1 class="dark-1">
+            Brand New <br />
+            Group of Architects
+          </h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+        <img class="banner-image" src="./images/banner.png" alt="" />
+      </section>
     </header>
 
-
     <main>
+      <section class="teams display-flex">
+        <div class="team-image-container">
+          <img src="./images/team1.png" alt="" />
+          <img src="./images/team2.png" alt="" />
+          <img src="./images/team3.png" alt="" />
+          <img src="./images/team4.png" alt="" />
+        </div>
+        <div class="our-features">
+          <h3 class="section-title">
+            <span class="dark-3" id="M">Quick list</span>
+            <span class="dark-1" id="B">of Our</span><br /><span class="orange" id="B"
+              >Features</span
+            >
+          </h3>
+          <p class="feature-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+
+      <section class="facts">
+        <h3 class="section-title dark-1" id="B">Some Facts</h3>
+        <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="facts-container">
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icon">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+        </div>
+      </section>
 
 
     </main>
 
-
-    <footer>
-
-    </footer>
-
-
-</body>
+    <footer></footer>
+  </body>
 </html>
