--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <div class="our-features">
           <h3 class="section-title">
             <span class="dark-3" id="M">Quick list</span>
-            <span class="dark-1" id="B">of Our</span><br /><span class="orange" id="B"
+            <span class="dark-1" id="B">of Our</span><br /><span
+              class="orange"
+              id="B"
               >Features</span
             >
           </h3>
@@ -63,31 +65,59 @@
 
       <section class="facts">
         <h3 class="section-title dark-1" id="B">Some Facts</h3>
-        <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <p class="dark-3 fact-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
         <div class="facts-container">
-            <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="./images/icons/ribon.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">54</h4>
+              <h5 class="fact-name">Award Winnings</h5>
             </div>
-            <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="./images/icons/projects.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">1458</h4>
+              <h5 class="fact-name">Project Finished</h5>
             </div>
-            <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img
+                src="./images/icons/customers.png"
+                alt=""
+                class="fact-icon"
+              />
+              <h4 class="fact-number">590</h4>
+              <h5 class="fact-name">Clints Worked</h5>
             </div>
-            <div class="fact">
-                <img src="" alt="" class="fact-icon">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="./images/icons/email.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">22578</h4>
+              <h5 class="fact-name">Email Send</h5>
             </div>
+          </div>
         </div>
       </section>
 
+      <section class="our-sponsoers">
+        <div class="sponsor-info">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="sponsor-companies">
+            <img src="./images/sponsors/spotify.png" alt="">
+            <img src="./images/sponsors/amazon.png" alt="">
+            <img src="./images/sponsors/google.png" alt="">
+            <img src="./images/sponsors/telerama.png" alt="">
+            <img src="./images/sponsors/figma.png" alt="">
+        </div>
+      </section>
 
     </main>
 
