--- a/index.html
+++ b/index.html
@@ -63,6 +63,42 @@
         </div>
       </section>
 
+      <!-- features section -->
+      <section class="features display-flex">
+        <div>
+            <h3 class="section-title" id="feature-section-title">
+                Features you will <br> love & enjoy
+            </h3>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="feature-card">
+                <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+
+        </div> 
+        <div class="featured-architect">
+            <img src="./images/architect.png" alt="">
+            <button id="experience-badge" class="btn-primary">
+                <span id="experience-year">10+Years</span>
+                <br>
+                <span >experience</span>
+            </button>
+        </div>
+      </section>
+
       <section class="facts">
         <h3 class="section-title dark-1" id="B">Some Facts</h3>
         <p class="dark-3 fact-description">
